feat: completed user get by id method
